arm/aks-agic/deploy-ingress/ingress-guestbook-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
    - hosts:
      - guestbook.kainiindustries.net
      secretName: aks-ingress-tls
  rules:
  - host: guestbook.kainiindustries.net
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
